fixed word wrap and other stylistic updates

--- a/client/public/assets/style.css
+++ b/client/public/assets/style.css
@@ -1,4 +1,5 @@
 * {
   margin: 0;
   font-family: "Sora", sans-serif;
+  overflow-wrap: break-word;
 }
