--- a/client/src/components/comment/comment.css
+++ b/client/src/components/comment/comment.css
@@ -1,3 +1,7 @@
 .commentHr {
   background-color: rgb(192, 192, 192);
 }
+
+.postComment {
+  margin: 10px 0;
+}
