--- a/client/src/components/noPosts/noPosts.css
+++ b/client/src/components/noPosts/noPosts.css
@@ -18,6 +18,7 @@
   color: rgb(70, 70, 70);
   font-weight: 600;
   padding-top: 25px;
+  max-width: 550px;
 }
 
 .noPostsImg {
