--- a/client/src/components/post/post.css
+++ b/client/src/components/post/post.css
@@ -17,7 +17,6 @@
 }
 
 .postTopLeft {
-  align-items: center;
   display: flex;
   justify-content: center;
 }
@@ -34,6 +33,8 @@
   font-style: 15px;
   font-weight: 500;
   margin: 0px 10px;
+  display: block;
+  min-width: 100px;
 }
 
 .postDate {
@@ -43,7 +44,13 @@
 
 .postText {
   padding: 25px;
-  word-wrap: normal;
+  display: block;
+  max-width: 300px;
+}
+
+.postCommentText {
+  display: block;
+  max-width: 150px;
 }
 
 .postImg {
@@ -114,4 +121,43 @@
   color: rgb(255, 255, 255);
   padding: 0 20px;
   font-size: 15px;
+}
+
+.commentsTitle {
+  margin-bottom: 10px;
+}
+
+@media (max-width: 400px) {
+  .postTopLeft {
+    flex-direction: column;
+  }
+
+  .postText {
+    max-width: 500px;
+  }
+
+  .postCommentText {
+    max-width: 230px;
+    margin: 10px 0;
+  }
+}
+
+@media (min-width: 510px) {
+  .postText {
+    max-width: 500px;
+  }
+
+  .postCommentText {
+    max-width: 260px;
+  }
+}
+
+@media (min-width: 650px) {
+  .postText {
+    max-width: 500px;
+  }
+
+  .postCommentText {
+    max-width: 400px;
+  }
 }
